# cargo-erlangapp

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: tests.rs
tests/testapp/crates/bonjourdylib/: Cargo.toml
tests/testapp/crates/helloexe/: Cargo.toml
tests/testapp/crates/holalib/: Cargo.toml
tests/testapp/crates/nihaocdylib/: Cargo.toml
