[package]
name = "cargo-erlangapp"
version = "0.1.5-pre"
description = "Build Rust crates embedded in an Erlang application"
repository = "https://github.com/goertzenator/cargo-erlangapp"
readme = "README.md"
keywords = ["cargo", "erlang"]
license = "MIT"
authors = ["Daniel Goertzen <daniel.goertzen@gmail.com>"]

[dependencies]
serde_json = "0.7"

[dev-dependencies]
walkdir = "0.1"
itertools = "0.4"
